--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,12 +1,12 @@
 /* Custom container */
-.container-narrow {
+.container-narrow { 
   margin: 0 auto;
   max-width: 700px; }
 
-.container-narrow > hr {
+.container-narrow > hr { 
   margin: 30px 0; }
 
-.navbar .nav {
+.navbar .nav {  
   float: right; }
 
 /* posts index */
@@ -19,7 +19,7 @@
   right: 0;
   font-size: 0.9em; }
 
-.post > .more {
+.post > .more { 
   margin: 10px 0;
   text-align: left; }
 
@@ -29,7 +29,7 @@
   font-weight: bold; }
 
 /* tag_box */
-.tag_box {
+.tag_box { 
   list-style: none;
   margin: 0;
   overflow: hidden; }
@@ -46,11 +46,11 @@
 .tag_box a {
   padding: 3px 6px;
   margin: 2px;
-  background: #eee;
-  color: #555;
-  border-radius: 3px;
+  background: rgb(0,157,140);
+  color: #fff;
+  border-radius: 5px;
   text-decoration: none;
-  border: 1px dashed #cccccc; }
+                 }
 
 .tag_box a span {
   vertical-align: super;
