--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,18 +1,25 @@
+<!--
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div>
+-->
 
 <div class="row-fluid post-full">
   <div class="span12">
     <div class="date">
-      <span>{{ page.date | date_to_long_string }}</span>
+      <div class="day_month">
+      {{ page.date | date:"%m/%d" }}
+      </div>
+      <div class="year">
+      {{ page.date | date:"%Y" }}
+      </div>
     </div>
-    <div class="content">
+    <div class="content card">
       {{ content }}
     </div>
 
   {% unless page.categories == empty %}
-    <ul class="tag_box inline">
+    <ul class="tag_box inline card">
       <li><i class="icon-folder-open"></i></li>
       {% assign categories_list = page.categories %}
       {% include JB/categories_list %}
@@ -20,7 +27,7 @@
   {% endunless %}  
 
   {% unless page.tags == empty %}
-    <ul class="tag_box inline">
+    <ul class="tag_box inline card">
       <li><i class="icon-tags"></i></li>
       {% assign tags_list = page.tags %}
       {% include JB/tags_list %}
@@ -28,7 +35,7 @@
   {% endunless %}  
 
     <hr>
-    <div class="pagination">
+    <div class="pagination card">
       <ul>
       {% if page.previous %}
         <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
