优化响应式

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -6,7 +6,7 @@
 
 <div class="row-fluid post-full">
   <div class="span12">
-    <div class="date">
+    <div class="date_label">
       <div class="day_month">
       {{ page.date | date:"%m/%d" }}
       </div>
@@ -35,18 +35,18 @@
   {% endunless %}  
 
     <hr>
-    <div class="pagination card">
-      <ul>
+    <div class="pagination card clearfix">
+      <ul class = "pull-right">
       {% if page.previous %}
-        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; 前一篇</a></li>
       {% else %}
-        <li class="prev disabled"><a>&larr; Previous</a></li>
+        <li class="prev disabled"><a>&larr; 前一篇</a></li>
       {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
+        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">所有日志</a></li>
       {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">后一篇 &rarr;</a></li>
       {% else %}
-        <li class="next disabled"><a>Next &rarr;</a>
+        <li class="next disabled"><a>后一篇 &rarr;</a>
       {% endif %}
       </ul>
     </div>
