--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,18 +1,28 @@
-/* Custom container */
+
 body{ background: url("/assets/themes/twitter/img/body_bg.png") repeat;}
 
+/*navbar bgcolor -- float*/
 .navbar .navbar-inner{ 
   background-color: rgba(0,157,148,0.9);
   }
 
+.navbar .nav {  
+  float: right; }
 
+
+
+/*page container -- card style -- */
 .nav-narrow{  
   margin: 0 auto;
   max-width: 800px;}
 
-.row-fluid.post-full .span12 .date {
+.container-narrow {
+  margin: 100px auto;
+  max-width: 800px; 
+  }
+
+.date_label {
   float: left;
-  margin-left:-70px; 
  
   width:80px; 
   height:48px; 
@@ -24,21 +34,21 @@ body{ background: url("/assets/themes/twitter/img/body_bg.png") repeat;}
 
 .card { 
   max-width: 800px;
-
   padding: 20px 40px;
   
   background-color: #fff; 
   }
 
-.container-narrow {
-  margin: 100px auto;
-  max-width: 800px; }
-
 .container-narrow > hr { 
   margin: 30px 0; }
 
-.navbar .nav {  
-  float: right; }
+.read_more {
+  margin-right: 0;
+  padding: 10px 20px;
+
+  background-color: #fff;
+}
+
 
 /* posts index */
 
