sync"date_label" and 优化小屏幕的padding
sync "date_label" of index.md and post.md

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -5,16 +5,18 @@
 -->
 
 <div class="row-fluid post-full">
-  <div class="span12">
-    <div class="date_label">
-      <div class="day_month">
-      {{ page.date | date:"%m/%d" }}
-      </div>
-      <div class="year">
-      {{ page.date | date:"%Y" }}
-      </div>
-    </div>
+  <div class="span12 ">
     <div class="content card">
+       <div class = "clearfix">
+        <div class="date_label">
+          <div class="day_month">
+          {{ page.date | date:"%m/%d" }}
+          </div>
+          <div class="year">
+          {{ page.date | date:"%Y" }}
+          </div>
+        </div>
+      </div>
       {{ content }}
     </div>
 
