--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -29,12 +29,13 @@ body{ background: url("./img/body_bg.png") repeat;}
 
   color: #fff;
   text-align: right; 
-  background: url("./img/bg.png")  left top no-repeat;
+  background: url("./img/date_label_bg.png")  left top no-repeat;
 }
+.day_month{ font-size: 1.3em;}
+.year{ font-size: 0.1em;}
 
 .card { 
   max-width: 800px;
-  padding: 20px 40px;
   
   background-color: #fff; 
   }
