--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,5 +1,4 @@
-
-body{ background: url("./img/body_bg.png") repeat;}
+body{ background: url("img/body_bg.png") repeat;}
 
 /*navbar bgcolor -- float*/
 .navbar .navbar-inner{ 
@@ -29,7 +28,7 @@ body{ background: url("./img/body_bg.png") repeat;}
 
   color: #fff;
   text-align: right; 
-  background: url("./img/date_label_bg.png")  left top no-repeat;
+  background: url("img/date_label_bg.png")  left top no-repeat;
 }
 .day_month{ font-size: 1.3em;}
 .year{ font-size: 0.1em;}
