--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -92,7 +92,7 @@ body{ background: url("img/body_bg.png") repeat;}
 
 
 .hat_title{
-    margin: -20px -40px 20px;
+/*    margin: -20px -40px 20px;*/
     padding: 10px;
 /*    background-color: rgb(229, 229, 229);*/
     color: rgb(0,173,207);
