--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -19,7 +19,7 @@ body{ background: url("img/body_bg.png") repeat;}
 
 .card { 
   max-width: 900px;
-  background: url("img/card_bg.jpg") #fff repeat center top; 
+  background: url("img/card_bg.jpg") rgba(255,255,255,0.6) repeat center top; 
   }
 
 .container-narrow > hr { 
