--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -2,7 +2,7 @@ body{ background: url("img/body_bg.png") repeat;}
  
 /*navbar bgcolor -- float*/
 .navbar .navbar-inner{ 
-  background-color: rgba(0,173,207,1);
+  background-color: #00a9a9;
   }
 
 .navbar .nav {  
