修改footer和a的颜色

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -53,7 +53,7 @@
       </div>
       
       <footer class="card">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+        <p>&copy; 2011 {{ site.author.name }}
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
