ues font-awesome

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -35,16 +35,16 @@
   {% endunless %}  
 
     
-    <div class="pagination card clearfix">
+    <div class="pagination clearfix">
       <ul class = "pull-right">
       {% if page.previous %}
-        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; 前一篇</a></li>
+        <li class="prev"><a class="fa fa-arrow-circle-left" href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}"> 前一篇</a></li>
       {% else %}
-        <li class="prev disabled"><a>&larr; 前一篇</a></li>
+        <li class="prev disabled" ><a class="fa fa-arrow-circle-left"> 前一篇</a></li>
       {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">所有日志</a></li>
+        <li><a class="fa fa-th" href="{{ BASE_PATH }}{{ site.JB.archive_path }}"> 所有日志</a></li>
       {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">后一篇 &rarr;</a></li>
+        <li class="next"><a  href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">后一篇 <span class="fa fa-arrow-circle-right">  </span></a></li>
       {% else %}
         <li class="next disabled"><a>后一篇 &rarr;</a>
       {% endif %}
