--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,4 +1,8 @@
 body{ background: url("img/body_bg.png") repeat;}
+
+.fa.fa-arrow-circle-right{
+    margin-right: 15px;
+}
  
 /*navbar bgcolor -- float*/
 .navbar .navbar-inner{ 
