<span class="fa fa-arrow-circle-right">  </span>

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -46,7 +46,7 @@
       {% if page.next %}
         <li class="next"><a  href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">后一篇 <span class="fa fa-arrow-circle-right">  </span></a></li>
       {% else %}
-        <li class="next disabled"><a>后一篇 &rarr;</a>
+        <li class="next disabled"><a >后一篇 <span class="fa fa-arrow-circle-right">  </span></a>
       {% endif %}
       </ul>
     </div>
