--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -96,10 +96,12 @@ body{ background: url("img/body_bg.png") repeat;}
 
 .hat_title{
 /*    margin: -20px -40px 20px;*/
-    padding: 10px;
+    padding: 30px 0 20px 0;
 /*    background-color: rgb(229, 229, 229);*/
-    color: rgb(0,173,207);
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    border-bottom: 1px solid #eee;
+/*    color: rgb(0,173,207);*/
+    font-size: 58px;
+    font-weight: 100;
+}
+.post_list{
+    margin-left: 60px;
 }
