--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -17,7 +17,8 @@
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="{{ ASSET_PATH }}/css/pygments.css" rel="stylesheet" type="text/css">
+    <link href="{{ ASSET_PATH }}/css/prettify.css" rel="stylesheet" type="text/css">
+    <script src="{{ ASSET_PATH }}/js/prettify.js"></script>
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -35,7 +36,7 @@
   
   </head>
 
-  <body>
+  <body onload="prettyPrint()">
     <div class="navbar">
       <div class="navbar-inner">
        <div class="nav-narrow">
